Figures comsol geometrie + figures ATE manip exist

--- a/tex/Abstract.tex
+++ b/tex/Abstract.tex
@@ -11,7 +11,7 @@ En effet, la convection naturelle est un phénomène où un transfert de chaleur
 
 L'objectif principal de cette thèse expérimentale est d'analyser et de quantifier l'effet de la convection naturelle sur cette distribution de température. Une approche combinant simulations numériques et expérimentations est adoptée pour étudier les mécanismes sous-jacents régissant les transferts thermiques dans le noyau, en tournant le réfrigérateur et son noyau dans diverses orientations d'intérêt. Un modèle théorique temporel du régime transitoire est également développé pour prédire le comportement du système et ainsi améliorer la compréhension de la machine. Il est démontré que \echaf{ajouter les conclusions}.
 
-Un espace dans la littérature portant sur la thermoacoustique est comblé par cette étude de l'impact de la convection naturelle sur la distribution de température dans le noyau du réfrigérateur thermoacoustique.
+Un espace dans la littérature portant sur la thermoacoustique est ainsi comblé par cette étude de l'impact de la convection naturelle sur la distribution de température dans le noyau du réfrigérateur thermoacoustique.
 
 \bigskip
 
