--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -67,7 +67,7 @@
         $\xi_1$ & \unit{\meter} & Déplacement particulaire dans le régénérateur \\
         $\xi_{SA1}$ & \unit{\meter} & Déplacement du piston de la source acoustique principale \\
         $\xi_{SA2}$ & \unit{\meter} & Déplacement du piston de la source acoustique secondaire \\
-        $\lambda$ & \unit{\meter} & Longueur d'onde du signal acoustique \\\hline
+        $\lambda$ & \unit{\meter} & Longueur d'onde acoustique \\\hline
     \end{longtable}
 
 \bigskip
